canvas overlap fixed

--- a/src/canvasStyle.css
+++ b/src/canvasStyle.css
@@ -3,4 +3,6 @@ body {
 }
 canvas {
   border: 3px solid black;
+  position: absolute;
+  left: 0;
 }
